--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,10 +7,15 @@
 <body>
 
 
-<section>
-  <div class="container">
-    test
+<section class="d-flex flex-column h-100">
+  <div class="container" id="messages-wrapper">
+    <ul id="messages"></ul>
   </div>
+
+  <form action="" id="input-form">
+    <input id="messages-field" autocomplete="off" /><button>Send</button>
+  </form>
+
 </section>
 
 
