Revert to templates

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,6 +8,7 @@
 
 
 <section class="d-flex flex-column h-100">
+  <h1>Messajer</h1>
   <div class="container" id="messages-wrapper">
     <ul id="messages"></ul>
   </div>
