--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -19,7 +19,7 @@
 
 </section>
 
-<script src="/socket.io/socket.io.js"></script>
+<script type="text/javascript" src="/js/socket.io/socket.io.js"></script>
 <script>
   var socket = io();
 </script>
